updated docs for transformer algorithm

--- a/transformer/html/nav.html
+++ b/transformer/html/nav.html
@@ -25,15 +25,14 @@
 			
 			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('welcome')">Welcome</a></li>
 			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('transformer')">Transformer</a></li>
-			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('readme')">Docs</a></li>
-            <!-- <li><a class="nav-link text-secondary h6" id="clients" data-toggle="collapse" aria-expanded="true" aria-controls="collapseClients" href="#collapseClients">Clients</a></li>
-	        <div id="collapseClients" class="collapse multi-collapse">
+			
+			<li><a class="nav-link text-secondary h7 font-italic" id="docs" data-toggle="collapse" aria-expanded="true" aria-controls="collapseDocs" href="#collapseDocs">Docs</a></li>
+	        <div id="collapseDocs" class="collapse multi-collapse">
                 <ul>
-                    <li><a class="nav-link text-secondary h6 font-italic" href='http://ssuweb.bom.gov.au/ssu_internal/ssuindex.pl?p=0&login=cws&pwd=cws' target='repository'>Customer/forecast repository</a></li>
-				    <li><a class="nav-link text-secondary h6 font-italic" href='https://bom365.sharepoint.com/:x:/s/ERG/EZBgZtypvkNDstFKulr3mZcBYkZMGmyQTfgPEdVE8WghkA?e=1WaTeV' target='client_contacts'>Client contacts</a></li>
-                    <li><a class="nav-link text-secondary h6 font-italic" href="http://aifs-wa.bom.gov.au/comms/cgi/index.search2.wa.html" target="kr">Product archive</a></li>
-			    </ul>
-            </div>			 -->
+                    <li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('readme_algorithm')">Algorithm</a></li>
+            	    <li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('readme')">README</a></li>
+                </ul>
+            </div>			
 
 		</ul>
 		
