updated transformer to read from config file

--- a/transformer/html/nav.html
+++ b/transformer/html/nav.html
@@ -30,7 +30,7 @@
 	        <div id="collapseDocs" class="collapse multi-collapse">
                 <ul>
                     <li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('readme_algorithm')">Algorithm</a></li>
-            	    <li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('readme')">README</a></li>
+            	    <li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('readme')">Back-end</a></li>
                 </ul>
             </div>			
 
